--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,10 +41,10 @@ jobs:
 
     steps:
     - name: Checkout source code
-      uses: actions/checkout@master
+      uses: actions/checkout@main
     
     - name: Set up Node.js
-      uses: actions/setup-node@master
+      uses: actions/setup-node@main
       with:
         node-version:14.x
       
